helm-charts/swim-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    name: swimapp-ing
    namespace: swimapp
  spec:
    rules:
      - host: swim.app
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: swimapp-swim-chart-svc
                  port: 
                    number: 80
    tls:
      - hosts:
        - swim.app
        secretName: swimapp-tls
